k8s-resource/ingress/tls/web-redirect.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: ing-nginx
  name: ing-nginx
spec:
  ports:
  - name: nginx
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: ing-nginx
  type: NodePort
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    run: ing-nginx
  name: ing-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      run: ing-nginx
  template:
    metadata:
      labels:
        run: ing-nginx
    spec:
      containers:
#      - image: morbz/docker-web-redirect
#        env:
#        - name: REDIRECT_TARGET
#          value: mydomain.net
      - image: ianneub/redirect
        imagePullPolicy: IfNotPresent
        name: ing-nginx
        ports:
        - containerPort: 80
          protocol: TCP
