k8s-resource/ingress/tls/node-ing-tls.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ing-node-tls
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
  - host: test.ibm.com
    http:
      paths:
      - path: /n1-tls
        backend:
          serviceName: ing-node-tls
          servicePort: 8080
      - path: /n2-tls
        backend:
          serviceName: ing-node-tls
          servicePort: 8080
  tls:
  - hosts:
    - test.ibm.com
    secretName: ing-tls-secret
